Fix form width
The input field was too wide due to font-size

--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ h1 {
 .addTaskForm__textInput {
   font-size: 2.5rem;
   padding: 0.5em 0.3em 0.5em 0.1em;
-  max-width: 100%;
+  width: 100%;
   border: none;
   border-bottom: 0.1em solid var(--clr-text-passive);
 }
